# cpp-vcpkg-template

./: .gitignore  CMakeLists.txt  README.md  vcpkg.txt
.github/workflows/: build.yml
include/Example/: Example.hpp
modules/: FindArgAgg.cmake
src/Example/: CMakeLists.txt  Example.cpp
src/ExampleCli/: CMakeLists.txt  main.cpp
tests/Example/: CMakeLists.txt  Example.cpp
